# Maxwell_Daemon

./: .commit_msg.txt  .env.example  .gitignore  .pre-commit-config.yaml  ADVERSARIAL_REVIEW_SUMMARY.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODE_QUALITY_IMPROVEMENTS.md  CONTRIBUTING.md  Dockerfile  Launch-Maxwell.bat  Launch-Maxwell.sh  PROFESSIONAL_REVIEW_SUMMARY.md  README.md  SECURITY.md  SPEC.md  bandit_report.json  check_prs.py  ci_failures.txt  coverage.json  fix.py  fleet.yaml  issues.json  log.txt  mkdocs.yml  mypy_output.txt  mypy_test_errors.txt  mypy_tests.txt  mypy_tests2.txt  output.txt  output_prints.txt  patch.py  patch_runner.py  patch_test.py  pr_645.diff  pr_774.json  pulls.json  pyproject.toml  (+12 more)
.gaai/core/: README.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/scripts/: check_subprocess_shell.py
.github/workflows/: anti-phantom-merge.yml  ci.yml  codeql.yml  conductor-fleet-dispatch.yml  docs.yml  lint-workflow-files.yml  local-only-runner-guard.yml  lockfile-refresh.yml  maxwell-daemon-fleet-dispatch.yml  release.yml
.jules/: bolt.md  palette.md  sentinel.md
ansible/: inventory.example.yml
ansible/playbooks/: install.yml
ansible/templates/: conductor.yaml.j2  maxwell-daemon.yaml.j2
apps/desktop-electron/: README.md  main.js  package-lock.json  package.json  preload.js  smoke-launch.js
benchmarks/: test_smoke.py
conductor/: contracts.py  events.py  metrics.py  tracing.py
conductor/api/: server.py
conductor/backends/: __init__.py  agent_loop.py  azure.py  base.py  claude.py  claude_code.py  condensation.py  ollama.py  ollama_agent_loop.py  registry.py
conductor/cli/: batch_dispatch.py  issues.py  main.py  tasks.py
conductor/config/: fleet.py  loader.py  models.py
conductor/core/: cost_alerter.py  doctor.py  ledger.py  model_selector.py  presets.py  router.py  task_store.py
conductor/daemon/: runner.py  scheduler.py
conductor/gh/: __init__.py  ci_patterns.py  client.py  context.py  discovery.py  executor.py  quality_gates.py  repo_map.py  workspace.py
conductor/memory/: __init__.py  episodic.py  manager.py  profile.py  scratchpad.py
conductor/tools/: __init__.py  builtins.py  mcp.py
deploy/: RUNBOOK.md  rollback.sh
deploy/ansible/: backup-config.yml  configure-conductor.yml  configure-maxwell.yml  deploy-agents.yml  health-check.yml  install-conductor.yml  install-maxwell.yml  upgrade-conductor.yml  upgrade-maxwell.yml
deploy/grafana/: maxwell-daemon-dashboard.json
deploy/prometheus/: alerts.yml
deploy/systemd/: maxwell-daemon.service
deploy/terraform/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf
docs/: contributing.md  index.md  logging.md
docs/adr/: 0001-initial-architecture.md  001-fastapi-vanilla-js-ui.md  002-sqlite-cost-ledger.md  003-websocket-event-system.md  ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md  ADR-006-ssh-worker-side-effect-failover.md  ADR-007-hook-subprocess-execution-model.md
docs/architecture/: artifacts.md  backends.md  browser-automation.md  contracts.md  fleet-architecture.md  gate-runtime.md  overview.md  system_specification.md  task-graphs-first-slice.md  task-graphs.md  work-items.md
docs/assessments/: 2026-04-26-Maxwell-Daemon-assessment.json  2026-04-26-comprehensive-assessment.md  A-N_Assessment_2026-04-19.md  assessment_summary.json  maxwell_daemon_assessment_v2.md
docs/community/: beta-announcement.md  beta-feedback.md  documentation-coverage.md  roadmap-governance.md  twitter-thread.md
docs/development/: backend-extension-guide.md  deep-traversal-hotspots-20260422.md  epic_openade_features.md  eval-harness.md  extensions.md  external-agent-adapters.md  ijfw_feature_review.md  issue-648-rebase-tracker.md  next-agent-prompt.md  open_source_agents_review.md  openade_review.md  testing.md  tool-authoring-guide.md
docs/feature_evaluation/: 01_ast_repo_mapping.md  02_docker_sandboxing_and_auto_fix.md  03_mcp_integration.md  04_multi_agent_sops_and_trident_qa.md  05_phase_gate_workflows_and_memory.md
docs/getting-started/: autonomous-workflow.md  configuration.md  examples.md  fleet-gauntlet-walkthrough.md  fleet-issue-queue.md  mcp.md  quickstart.md  resource-aware-routing.md  troubleshooting.md
docs/operations/: ansible.md  budgets.md  deployment.md  docs-publishing.md  monitoring.md  observability.md  production-readiness.md  rate-limiting.md  release-readiness.md  remote-access.md  security.md  tailscale.md  troubleshooting.md  webhooks.md  wsl2-node-deployment.md
docs/reference/: action-ledger.md  api.md  cli.md  configuration.md  grpc.md  openapi.json  openapi.md  tasks-cli.md
docs/reviews/: 2026-05-22-adversarial-review.md
docs/specs/: README.md
docs/testing/: integration-tests.md
extensions/conductor-vscode/: README.md  extension.js  package.json
extensions/jetbrains/: build.gradle.kts
extensions/obsidian/: main.js  manifest.json
extensions/vscode/: package-lock.json  package.json
extensions/zed/: Cargo.toml  extension.toml
grafana/: conductor-dashboard.json  maxwell-daemon-dashboard.json
maxwell_daemon/: __init__.py  audit.py  auth.py  contracts.py  errors.py  events.py  fsutil.py  github_auth.py  hooks.py  launcher.py  logging.py  logging_config.py  metrics.py  recipes.py  rules.py  spec.py  tdd_gate.py  tracing.py
maxwell_daemon/api/: __init__.py  contract.py  correlation.py  deps.py  problem.py  rate_limit.py  security_headers.py  server.py  validation.py
maxwell_daemon/backends/: __init__.py  agent_loop.py  azure.py  base.py  claude.py  claude_code.py  codex_cli.py  concurrency.py  condensation.py  continue_cli.py  deepseek.py  external_adapter.py  external_plugins.py  gemini.py  groq.py  huggingface.py  (+10 more)
scripts/: check_all_sorted.py  check_coverage_floor.py  check_file_size_budget.py  check_local_only_workflows.py  check_noqa_ratchet.py  check_todo_fixme.py  check_tracked_ignored.py  generate_openapi_snapshot.py
site/: 404.html  index.html  sitemap.xml
tests/: conftest.py  helpers.py
(+543 files in other folders)
