[build-system]
requires = ["hatchling>=1.30.1"]
build-backend = "hatchling.build"

[project]
name = "maxwell-daemon"
version = "0.2.0"
description = "Multi-backend autonomous code agent orchestrator with fleet management"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "D-sorganization", email = "dieterolson@gmail.com" }]
keywords = ["ai", "agents", "llm", "automation", "orchestration", "fleet"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "anthropic>=0.111.0",
    "openai>=2.43.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.14.2",
    "pyyaml>=6.0",
    "rich>=13.7.0",
    "typer>=0.26.8",
    "fastapi>=0.138.0,<0.138.1",
    "uvicorn[standard]>=0.49.0",
    "websockets>=13.0",
    "prometheus-client>=0.20.0",
    "structlog>=26.1.0",
    "tenacity>=9.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "PyJWT>=2.8.0",
    "keyring>=25.0.0",
    "mcp>=1.28.0",
]

[project.optional-dependencies]
ollama = ["ollama>=0.3.0"]
google = ["google-cloud-aiplatform>=1.158.0"]
azure = ["azure-identity>=1.18.0"]
grpc = ["grpcio>=1.81.1", "grpcio-tools>=1.81.1", "protobuf>=5.28.0"]
ssh = ["asyncssh>=2.23.1"]
browser = ["playwright>=1.60.0"]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "pymdown-extensions>=10.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.24.0",
    "pytest-benchmark>=4.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "respx>=0.21.0",
    "ruff>=0.15.18",
    "mypy>=1.11.0",
    "opentelemetry-sdk>=1.42.1",
    "tomli>=2.0.0",
    "types-pyyaml",
]
all = ["maxwell-daemon[ollama,google,azure,grpc,ssh,browser,dev]"]

[project.scripts]
maxwell-daemon = "maxwell_daemon.cli.main:app"
maxwell-daemon-runner = "maxwell_daemon.daemon.runner:main"

[project.urls]
Homepage = "https://github.com/D-sorganization/Maxwell-Daemon"
Documentation = "https://github.com/D-sorganization/Maxwell-Daemon#readme"
Repository = "https://github.com/D-sorganization/Maxwell-Daemon"
Issues = "https://github.com/D-sorganization/Maxwell-Daemon/issues"

[tool.hatch.build.targets.wheel]
packages = ["maxwell_daemon"]

[tool.hatch.build.targets.wheel.force-include]
"maxwell_daemon/api/ui/index.html" = "maxwell_daemon/api/ui/index.html"
"maxwell_daemon/api/ui/app.js" = "maxwell_daemon/api/ui/app.js"
"maxwell_daemon/api/ui/style.css" = "maxwell_daemon/api/ui/style.css"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF", "C90", "BLE"]
ignore = ["E501"]
# `BLE` (flake8-blind-except) is now enforced. Existing bare
# `except Exception:` handlers (~94 sites, see #795) are grandfathered
# with inline `# noqa: BLE001` directives so any new code is held to
# the stricter standard. Per-module remediation tracked under #795.

[tool.ruff.lint.mccabe]
# Industry standard is 10–15 (see #794). Existing high-complexity
# functions are grandfathered with inline `# noqa: C901` directives so
# new code is held to the stricter standard. Per-function refactors
# remain tracked under #794 (also see #793 / #798 for the two largest).
max-complexity = 15

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
timeout = 60
timeout_method = "thread"
# ``tests/benchmark/`` and ``tests/benchmarks/`` are intentionally
# excluded from the default run.
# Performance benchmarks are timing-sensitive and must be invoked
# explicitly via ``pytest tests/benchmark/ tests/benchmarks/ --benchmark-only``; including
# them in the standard unit/integration lane would bias coverage and
# potentially cause flakes on slow runners.
#
# Default lane: fast, deterministic, offline. See
# Repository_Management/docs/FLEET_TESTING_STANDARDS.md §2.
# NOTE: the coverage floor is single-sourced in scripts/config/coverage_floor.json
# and enforced by the "Coverage floor (ratchet)" CI job (#993). Do NOT add a
# --cov-fail-under here — it would be a competing, weaker floor that drifts from
# the ratchet. (pytest addopts is whitespace-split and does not accept # comments.)
addopts = """
  -ra
  --strict-markers
  --strict-config
  --durations=20
  --cov=maxwell_daemon
  --cov-report=term-missing
  --ignore=tests/benchmark
  --ignore=tests/benchmarks
  -m "not slow and not live_simulation and not e2e and not requires_network"
"""

markers = [
  # ---- tier markers ----
  "unit: pure logic, fully mocked, < 100 ms wall-clock",
  "integration: cross-module / file-system / process boundaries, < 5 s",
  "e2e: full-stack smoke tests; nightly + release gate only",
  "slow: > 1 s wall-clock; deselect with -m 'not slow'",
  "live_simulation: requires a real physics / math engine; deselect by default",

  # ---- environment markers ----
  "requires_network: needs real outbound network; deselect by default",
  "requires_gpu: needs CUDA / Metal / ROCm",
  "requires_gl: needs OpenGL or a display",
  "headless_safe: verified under QT_QPA_PLATFORM=offscreen",

  # ---- workflow markers ----
  "serial: must run with -n 0 (xdist parallel breaks this test)",
  "benchmark: deterministic perf smoke; not a primary correctness gate",
  "smoke: release-blocking smoke; subset of e2e",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["prometheus_client", "prometheus_client.*", "opentelemetry.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tomli"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["anthropic", "anthropic.*", "openai", "openai.*"]
ignore_missing_imports = false

[[tool.mypy.overrides]]
module = ["jwt", "jwt.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["asyncssh", "playwright", "playwright.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "google",
    "google.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["keyring", "keyring.*"]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = false
init_typed = true
warn_required_dynamic_aliases = true

[tool.bandit]
# Tests contain intentional assertions and fake secrets for fixtures — skip.
exclude_dirs = ["tests", "docs"]
# B101 is assert-removed-under-optimisation, which is a style nit not a vuln.
# B311 is random-for-security; we use random.uniform for jitter (load distribution),
#       not cryptographic purposes.
# B404/B603 are about subprocess — we deliberately use subprocess with argv lists.
skips = ["B101", "B311", "B404", "B603"]

[tool.uv]
# cffi 2.0.0 ships a wheel with malformed METADATA (Name field missing),
# causing uv to fail on Python 3.10. Pin below 2.0 until upstream fixes it.
constraint-dependencies = ["cffi<2.0.0"]
